<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">K-9 Mail</string>
    <string name="beta_app_name">K-9 Mail BETA</string>
    <string name="app_authors">Google, The K-9 Dog Walkers.</string>
    <string name="app_copyright_fmt">Copyright 2008-<xliff:g>%s</xliff:g> The K-9 Dog Walkers. Portions Copyright 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="read_messages_label">read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="advanced">Advanced</string>
    <string name="folder_list_title"><xliff:g id="account">%s</xliff:g> </string>
    <string name="shortcuts_title">K-9 Accounts</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g> </string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="choose_color_title">Choose a Color</string>
    <string name="activity_header_format"><xliff:g id="activity_prefix">%s</xliff:g><xliff:g id="unread_count">%s</xliff:g><xliff:g id="operation">%s</xliff:g></string>
    <string name="activity_unread_count">\u0020[<xliff:g id="unread_count">%d</xliff:g>]</string>
    <string name="status_loading_account_folder">\u0020(Poll <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g>)</string>
    <string name="status_loading_account_folder_headers">\u0020(Fetching headers <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g>)</string>
    <string name="status_sending_account">\u0020(Sending <xliff:g id="account">%s</xliff:g><xliff:g id="progress">%s</xliff:g>)</string>
    <string name="status_processing_account">\u0020(Proc <xliff:g id="account">%s</xliff:g>:<xliff:g id="command">%s</xliff:g><xliff:g id="progress">%s</xliff:g>)</string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%s</xliff:g>/<xliff:g id="total">%s</xliff:g></string>
    <string name="status_next_poll">\u0020(Next poll @ <xliff:g id="nexttime">%s</xliff:g>)</string>
    <string name="status_syncing_off">\u0020(Syncing disabled)</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="delete_all_action">Clear folder</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="continue_action">Continue</string>
    <string name="done_action">Done</string>
    <string name="remove_action">Remove</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="retry_action">Retry</string>
    <string name="refresh_action">Refresh</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="list_folders_action">Folder list</string>
    <string name="refresh_folders_action">Refresh folders</string>
    <string name="mark_all_as_read_action">Mark all messages as read</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="open_action">Open</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="accounts_action">Accounts</string>
    <string name="back_to_accounts_action">◀</string>
    <string name="back_to_folder_list_action">◀</string>
    <string name="read_action">Read</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="mark_all_as_read_dlg_title">Mark all messages as read</string>
    <string name="mark_all_as_read_dlg_instructions_fmt">Mark all messages in \'<xliff:g id="folder">%s</xliff:g>\' as read?  (including
    messages in the folder that are not displayed in K-9)</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="show_full_header_action">Show full header</string>
    <string name="hide_full_header_action">Hide full header</string>
    <string name="select_text_action">Select text</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="move_to_action">Move to</string>
    <string name="folders_action">Folders</string>
    <string name="view_hide_details_action">View/hide details</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="edit_subject_action">Edit subject</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="add_attachment_action_image">Add attachment (Image)</string>
    <string name="add_attachment_action_video">Add attachment (Video)</string>
    <string name="dump_settings_action">Dump settings</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="clear_local_folder_action">Clear local messages</string>
    <string name="set_sort_action">Choose sort</string>
    <string name="reverse_sort_action">Reverse sort</string>
    <string name="about_action">About</string>
    <string name="prefs_title">Settings</string>
    <string name="accounts_context_menu_title">Account options</string>
    <string name="folder_context_menu_title">Folder options</string>
    <string name="general_no_subject">(No subject)</string>
    <string name="general_no_date">No date</string>
    <string name="general_no_sender">No sender</string>
    <string name="status_loading">Polling</string>
    <string name="status_loading_folder">(Poll <xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g>)</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_invalid_id_error">Message not found</string>
    <string name="status_error">Error</string>
    <string name="status_sending">Sending</string>
    <string name="status_loading_more_failed">Retry loading more messages</string>
    <string name="load_more_messages_fmt">Load up
    to <xliff:g id="messages_to_load">%d</xliff:g> more</string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_bytes">B</string>
    <string name="account_size_changed">
    Account \"<xliff:g id="account">%s</xliff:g>\" shrunk from
    <xliff:g id="oldSize">%s</xliff:g>
    to
    <xliff:g id="newSize">%s</xliff:g>
    </string>
    <string name="compacting_account">Compacting account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="clearing_account">Clearing account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="recreating_account">Recreating account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="notification_new_title">New mail</string>
    <string name="notification_new_scrolling">New mail from <xliff:g id="sender">%s</xliff:g></string>
    <string name="notification_new_one_account_fmt"><xliff:g id="unread_message_count">%d</xliff:g> Unread (<xliff:g id="account">%s</xliff:g>)</string>
    <string name="notification_new_one_account_unknown_unread_count_fmt"><xliff:g id="new_message_count">%d</xliff:g> New messages (<xliff:g id="account">%s</xliff:g>)</string>
    <string name="notification_new_multi_account_fmt">in <xliff:g id="number_accounts">%d</xliff:g> accounts</string>
    <string name="notification_unsent_title">Message not sent</string>
    <string name="notification_bg_sync_ticker">Checking mail: <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g></string>
    <string name="notification_bg_sync_title">Checking mail</string>
    <string name="notification_bg_send_ticker">Sending mail: <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_bg_send_title">Sending mail</string>
    <string name="notification_bg_title_separator">:</string>
    <string name="special_mailbox_name_inbox">Inbox</string>
    <string name="special_mailbox_name_outbox">Outbox</string>
    <string name="special_mailbox_name_drafts">Drafts</string>
    <string name="special_mailbox_name_trash">Trash</string>
    <string name="special_mailbox_name_sent">Sent</string>
    <string name="special_mailbox_name_archive">Archive</string>
    <string name="special_mailbox_name_spam">Spam</string>
    <string name="special_mailbox_name_drafts_fmt"><xliff:g id="folder">%s</xliff:g> (Drafts)</string>
    <string name="special_mailbox_name_trash_fmt"><xliff:g id="folder">%s</xliff:g> (Trash)</string>
    <string name="special_mailbox_name_sent_fmt"><xliff:g id="folder">%s</xliff:g> (Sent)</string>
    <string name="special_mailbox_name_archive_fmt"><xliff:g id="folder">%s</xliff:g> (Archive)</string>
    <string name="special_mailbox_name_spam_fmt"><xliff:g id="folder">%s</xliff:g> (Spam)</string>
    <string name="send_failure_subject">Failed to send some messages</string>
    <string name="account_settings_filter_name">Name the filter:</string>
    <string name="account_settings_filter_any_or_all_begin">When a message matches...</string>
    <string name="account_settings_filter_all">all</string>
    <string name="account_settings_filter_any">any</string>
    <string name="account_settings_filter_any_or_all_end">...of the following:</string>
    <string name="account_settings_filter_actions_heading">...do:</string>
    <string name="account_settings_filter_add_new_criterion">add</string>
</resources>